# GHDA-SaaS

./: .env.example  .gitignore  ARCHITECTURE_V2_AI_POWERED.md  Dockerfile  ENHANCED_POC_GUIDE.md  MVP_ROADMAP.md  POC_QUICKSTART.md  README.md  README_POST_POC.md  SAMPLE_REPORT.txt  SCHEMA.md  check_model_context.py  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  poc_analyzer.py  poc_analyzer_local.py  poc_analyzer_local_enhanced.py  poc_analyzer_smart.py  pyproject.toml  select_model.py  test_lm_studio_connection.py  tsconfig.base.json  turbo.json
app/: config.py  main.py
app/api/v1/: router.py
app/db/: indexes.py  session.py
app/utils/: cache.py  performance.py
apps/analytics-service/: Dockerfile  pyproject.toml
apps/analytics-service/src/analytics_service/: main.py
apps/api-gateway/: Dockerfile  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/api-gateway/src/: index.ts
apps/api-gateway/src/middleware/: request-logger.ts
apps/api-gateway/src/routes/: health.ts  proxy.ts
apps/document-service/: Dockerfile  pyproject.toml
apps/document-service/src/document_service/: main.py
apps/processing-service/: Dockerfile  pyproject.toml
apps/processing-service/src/processing_service/: main.py
apps/report-service/: Dockerfile  pyproject.toml
apps/report-service/src/report_service/: main.py
data/phrase_dictionaries/: ppc_attendance_barriers.json  ppc_lab_issues.json
data/rules/: ppc_rules_v1.json
docs/: ARCHITECTURE.md  DOCUMENTATION_CONSOLIDATION.md  GETTING_STARTED.md  INDEX.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_MODEL_SELECTION.md  TROUBLESHOOTING_LM_STUDIO.md
docs/archive/: EMERGENCY_FIX.md
docs/development/: API_SPECIFICATION.md  PHRASE_NORMALIZATION_ENGINE.md  RULE_ENGINE_ARCHITECTURE.md
frontend/admin-dashboard/: Dockerfile  package.json
frontend/admin-dashboard/src/app/: layout.tsx  page.tsx
frontend/admin-dashboard/src/providers/: QueryProvider.tsx
infra/docker/: docker-compose.yml  prometheus.yml
scripts/: init-db.sh  setup.sh  test-services.sh  verify.sh
