[project]
name = "analytics-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "ghda-db[db] @ file:///${PROJECT_ROOT}/packages/db",
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"
