[project]
name = "processing-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "python-docx>=1.1.0",
    "PyPDF2>=3.0.1",
    "pdfplumber>=0.10.3",
    "pytesseract>=0.3.10",
    "Pillow>=10.1.0",
    "minio>=7.2.3",
    "boto3>=1.34.0",
    "ghda-db[db] @ file:///${PROJECT_ROOT}/packages/db",
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"
